--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,9 +1,9 @@
-body { 
-    color:rgb(0, 0, 0);
-    background-color: rgb(192, 194, 255);   
+body {
+    color: rgb(0, 0, 0);
+    background-color: rgb(192, 194, 255);
 }
 
-a:visited{
+a:visited {
     color: rgb(255, 0, 153);
     font-size: smaller;
 }
@@ -12,11 +12,11 @@ a:hover {
     color: blueviolet;
 }
 
-a:active{
+a:active {
     color: rgb(43, 255, 0);
 }
 
-a:link{
+a:link {
     text-decoration: none;
 }
 
@@ -24,9 +24,11 @@ div {
     text-align: center;
 }
 
-h1, h2, h3.diseñoh  {
-color: rgb(199, 255, 170);
-background-color: rgb(188, 225, 171);
-font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 
-'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+h1,
+h2,
+h3.diseñoh {
+    color: rgb(199, 255, 170);
+    background-color: rgb(188, 225, 171);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+        'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
