--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -32,3 +32,7 @@ h3.diseñoh {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
         'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+table {
+    width: 100%;
+}
